--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>Example Git</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea aperiam magni similique ex! Sed a veniam excepturi voluptates nisi consectetur similique, ullam porro doloremque rerum! Perferendis, praesentium magnam! Deleniti, dicta?
+    </p>
 </body>
 </html>
